# FigureFridayW52

./: .gitignore  FigFridayW52_polars.py  README.md  figfridayW52.py  pyproject.toml  requirements.txt
