[tool.poetry]
name = "friday-plotly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.18.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
joypy = "^0.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
